Bug 275666 - kjotsmigrator garbles non-latin characters in notes
Summary: kjotsmigrator garbles non-latin characters in notes
Status: RESOLVED FIXED
Alias: None
Product: kjots
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords:
: 276488 278081 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-14 23:17 UTC by Densetsu no Ero-sennin
Modified: 2011-07-19 10:59 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test KJots file (678 bytes, text/html)
2011-06-14 23:17 UTC, Densetsu no Ero-sennin
Details
Set message charset to UTF-8 before setting the content (768 bytes, patch)
2011-07-11 21:38 UTC, Densetsu no Ero-sennin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Densetsu no Ero-sennin 2011-06-14 23:17:20 UTC
Created attachment 61000 [details]
Test KJots file

Version:           4.6 (using KDE 4.6.4) 
OS:                Linux

After migrating my notes to Akonadi, all cyrillic characters were replaced by "?" symbols.

Reproducible: Always

Steps to Reproduce:
1. Put the attached file into ~/.kde4/share/apps/kjots
2. Run kjotsmigrator
3. View the resulting Akonadi resource in KJots


Actual Results:  
The test on Page 1 is "????????"

Expected Results:  
Should be "Проверка" instead of "????????"
Comment 1 Stephen Kelly 2011-07-02 17:59:19 UTC
Git commit 23e78a98f6825651898e3036439e5433522cbe66 by Stephen Kelly.
Committed on 02/07/2011 at 19:38.
Pushed by skelly into branch 'master'.

Use the correct encoding.

BUG: 275666

M  +2    -0    migration/kjots/kjotsmigrator.cpp     

http://commits.kde.org/kdepim-runtime/23e78a98f6825651898e3036439e5433522cbe66
Comment 2 Stephen Kelly 2011-07-02 17:59:36 UTC
Git commit c0e7ce13d79521c6402fc192b71e1b74945b89e5 by Stephen Kelly.
Committed on 02/07/2011 at 19:38.
Pushed by skelly into branch '4.6'.

Use the correct encoding.

BUG: 275666

M  +2    -0    migration/kjots/kjotsmigrator.cpp     

http://commits.kde.org/kdepim-runtime/c0e7ce13d79521c6402fc192b71e1b74945b89e5
Comment 3 Christophe Marin 2011-07-05 20:27:46 UTC
*** Bug 276488 has been marked as a duplicate of this bug. ***
Comment 4 Densetsu no Ero-sennin 2011-07-11 21:28:29 UTC
The bug is still present in kdepim-runtime-4.6.1.
Comment 5 Densetsu no Ero-sennin 2011-07-11 21:38:39 UTC
Created attachment 61787 [details]
Set message charset to UTF-8 before setting the content

This patch works for me.
Comment 6 Behem0th 2011-07-15 14:35:00 UTC
(In reply to comment #5)
> Created an attachment (id=61787) [details]
> Set message charset to UTF-8 before setting the content
> 
> This patch works for me.

Thanks for the patch, work with kdepim-runtime-4.6.1
Comment 7 Christophe Marin 2011-07-16 10:46:26 UTC
(In reply to comment #5)
> Created an attachment (id=61787) [details]
> Set message charset to UTF-8 before setting the content
> 
> This patch works for me.

Confirmed.
Comment 8 Stephen Kelly 2011-07-17 11:51:51 UTC
Git commit d282b1960d7f799632bbc500d391fe13c356ce99 by Stephen Kelly, on behalf of Densetsu no Ero-sennin.
Committed on 17/07/2011 at 13:49.
Pushed by skelly into branch '4.6'.

Set the content after setting the encoding.

BUG: 275666

M  +1    -1    migration/kjots/kjotsmigrator.cpp

http://commits.kde.org/kdepim-runtime/d282b1960d7f799632bbc500d391fe13c356ce99
Comment 9 Stephen Kelly 2011-07-17 11:53:21 UTC
Git commit b7d327483a13f1f730dec3eddc908eaae21784cd by Stephen Kelly, on behalf of Densetsu no Ero-sennin.
Committed on 17/07/2011 at 13:49.
Pushed by skelly into branch 'master'.

Set the content after setting the encoding.

BUG: 275666

M  +1    -1    migration/kjots/kjotsmigrator.cpp

http://commits.kde.org/kdepim-runtime/b7d327483a13f1f730dec3eddc908eaae21784cd
Comment 10 Christophe Marin 2011-07-19 10:59:52 UTC
*** Bug 278081 has been marked as a duplicate of this bug. ***