Set the content after setting the encoding.

BUG: 275666