migration/kjots/kjotsmigrator.cpp
@@ -333,11 +333,11 @@ void KJotsMigrator::parsePageXml( QDomElement&me , bool oldBook, const Collectio
     }
   }
   KMime::Content* c = note->mainBodyPart();
-  c->fromUnicodeString( isRichText ? document.toHtml() : document.toPlainText() );
 
   note->contentType( true )->setMimeType( isRichText ? "text/html" : "text/plain" );
   note->contentType( true )->setCharset( "utf-8" );
   note->contentTransferEncoding( true )->setEncoding( KMime::Headers::CEquPr );
+  c->fromUnicodeString( isRichText ? document.toHtml() : document.toPlainText() );
 
   note->assemble();
 
